--- a/gleam/high-score-board/.exercism/config.json
+++ b/gleam/high-score-board/.exercism/config.json
@@ -2,8 +2,6 @@
   "authors": [
     "lpil"
   ],
-  "contributors": [
-  ],
   "files": {
     "solution": [
       "src/high_score_board.gleam"
@@ -22,5 +20,5 @@
   "forked_from": [
     "javascript/high-score-board"
   ],
-  "blurb": "Practice Gleam maps by tracking high scores of an arcade game."
+  "blurb": "Practice Gleam dicts by tracking high scores of an arcade game."
 }
